--- a/01-html/02-images.html
+++ b/01-html/02-images.html
@@ -9,6 +9,24 @@
   <body>
     <main>
       <!-- Add your code here -->
+      <figure>
+        <img
+          src="http://placebear.com/g/200/150"
+          alt="image of a bear(bear noises)"
+          width="200"
+          height="150"
+        />
+        <figcaption>Bears Rock!!!!!</figcaption>
+      </figure>
+      <figure>
+        <img
+          src="http://place-puppy.com/puppy/y:200/x:150"
+          alt="image of a puppy(woof)"
+          width="200"
+          height="150"
+        />
+        <figcaption>puppys are cute!!!</figcaption>
+      </figure>
     </main>
   </body>
 </html>
