--- a/06-bootstrap/01-cards.html
+++ b/06-bootstrap/01-cards.html
@@ -7,12 +7,41 @@
     <title>Exercise 01 - Cards</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="../_styles/styles.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>01 - Cards</h1>
-    <!-- Add your code here -->
+    <main class="container mt-5">
+      <h1 class="mb-4">01 - Bootstrap Cards</h1>
+      <div class="card d-inline-block w-25">
+        <h3 class="card-header">Featured</div>
+        <div class="box bg-secondary"></div>
+        <div class="card-body">
+          <h5 class="card-title">Special Title Treatment</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and body
+          </p>
+          <button class="btn btn-primary">Click Me</button>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last Updated 3 minutes ago</small>
+        </div>
+      </div>
+      <div class="card d-inline-block w-25">
+        <h3 class="card-header">Featured</div>
+        <div class="box bg-secondary"></div>
+        <div class="card-body">
+          <h5 class="card-title">Special Title Treatment</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and body
+          </p>
+          <button class="btn btn-primary">Click Me</button>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last Updated 3 minutes ago</small>
+      </div>
+    </main>
   </body>
 </html>
